--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: janiceli98315@gmail.com
 
 
 # absolute or relative
-profile_picture: assets/images/pp.jpg
+profile_picture: assets/images/pp.JPG
 
 # Google Analytics ID
 google_analytics: 
