--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jiafeng (Janice) Li
 description: Statistical Analyst
-site_title: '@JaniceLi'
+site_title: 'Jan's Web'
 
 # Build settings
 markdown: kramdown
