--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jiafeng (Janice) Li
-description: Statistical Analyst
+description: Data Scientist / Data Analyst
 site_title: 'Janice Li'
 
 # Build settings
