--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Jiafeng (Janice) Li
 description: Data Scientist / Data Analyst
+location: 📍 New Brunswick, New Jersey
 site_title: 'Janice Li'
 
 # Build settings
